// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Tabs stateful - absolute 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-iudvmv"
  >
    <div
      class="css-64377y"
      role="tablist"
    >
      <button
        class="css-133zstr"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-18lpvrh"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - no initial 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-pk9w1n"
  >
    <div
      class="css-64377y"
      role="tablist"
    >
      <button
        class="css-133zstr"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-1bx5ylf"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - with initial 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-pk9w1n"
  >
    <div
      class="css-64377y"
      role="tablist"
    >
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-133zstr"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-1bx5ylf"
    >
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:block"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - default 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-pk9w1n"
  >
    <div
      class="css-64377y"
      role="tablist"
    >
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-1540u6r"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-1bx5ylf"
    >
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - empty 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <p
    class="css-hftiue"
  >
    no panels available
  </p>
</div>
`;
